--- a/src/main/resources/global.properties
+++ b/src/main/resources/global.properties
@@ -1,1 +1,2 @@
 ryanair.routes.url=https://api.ryanair.com/core/3/routes
+ryanair.schedules.url=https://api.ryanair.com/timetable/3/schedules/{departure}/{arrival}/years/{year}/months/{month}
