--- a/src/test/resources/message.properties
+++ b/src/test/resources/message.properties
@@ -1,1 +1,2 @@
-routeprovider.ryanair.error=Ryanair route API not reached for some reason: {0}
+routeprovider.ryanair.error=Ryanair route API call not successful for some reason: {0}
+schedule.ryanair.error=Ryanair schedule API call not successful for some reason: {0}
