--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=Interconnecting-flights
 server.port=8881
+server.contextPath=/lotoftravel
 spring.cloud.config.uri=http://localhost:9090
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
+spring.jackson.serialization.INDENT_OUTPUT = true
